styling for large sceen orientation

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lora&family=Ubuntu:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lora&family=Ubuntu:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
     <title>Document</title>
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header>
-      <div class="container container-nav">
+      <div class="container container-flex">
         <div class="site-title">
           <h1>Living The Simple Life</h1>
           <p class="subtitle">A blog exploring minimalism in life</p>
@@ -31,20 +31,20 @@
       </div>
     </header>
 
-    <div class="container">
+    <div class="container container-flex">
       <main role="main">
         <article class="article-featured">
           <h2 class="article-title">Finding simplicity in life</h2>
           <img src="img/life.jpg" alt="" class="article-image" />
           <p class="article-info">July 23, 2019 | 3 comments</p>
           <p class="article-body">
-            Life can get complicated really quickly, but it doesn't have to be!
-            There are many ways to simplify your life, a few of which we've
-            explored in the past. This week we're taking a bit of a approach
+            <strong> Life can get complicated really quickly</strong>, but it doesn't have to be!
+            There are many ways to simplify your life, <a href="#"> a few of which we've
+            explored in the past.</a> This week we're taking a bit of a approach
             though, in how you can find simplicity in the life you already
             living.
           </p>
-          <a href="#" class="article-read-more">continue reading</a>
+          <a href="#" class="article-read-more">CONTINUE READING</a>
         </article>
 
         <article class="article-recent">
@@ -55,7 +55,7 @@
               be healthy, you have to eat healthy. One of the easiest ways to do
               that is to keep your cooking nice and simple.
             </p>
-            <a href="#" class="article-read-more">continue reading</a>
+            <a href="#" class="article-read-more">CONTINUE READING</a>
           </div>
 
           <div class="article-recent-secondary">
@@ -73,7 +73,7 @@
               keeping your work life as simple as possible, it will help balance
               everything out.
             </p>
-            <a href="#" class="article-read-more">continue reading</a>
+            <a href="#" class="article-read-more">CONTINUE READING</a>
           </div>
 
           <div class="article-recent-secondary">
@@ -91,7 +91,7 @@
               impact they were hoping for. Staying simple will help draw the eye
               where you want it to and make things pop like never before.
             </p>
-            <a href="#" class="article-read-more">continue reading</a>
+            <a href="#" class="article-read-more">CONTINUE READING</a>
           </div>
 
           <div class="article-recent-secondary">
