--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
     </div>
 
     <footer>
-      <p>Living the Simple Life</p>
-      <p>Copyright 2019</p>
+      <p><strong>Living the Simple Life</strong></p>
+      <p><strong>Copyright 2019</strong></p>
     </footer>
   </body>
 </html>
